--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -19,7 +19,7 @@ body,
     top: 0;
     left: 0;
     overflow-y: auto;
-    scroll-snap-type: y mandatory ;
+    scroll-snap-type: y mandatory;
     z-index: 10;
 }
 
@@ -76,36 +76,36 @@ body {
 
 @media only screen and (max-width: 800px) {
 
-    .dot{
-        padding: 10;
-    }
-
-    .dot>h1 {
-        font-size: 3em;
-        color: blue;
-    }
-}
-
-@media only screen and (max-width: 700px) {
-    .dot{
-        padding: 10;
-    }
-
-    .dot>h1 {
-        font-size: 3em;
-        color: green;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-
-    .dot{
+    .dot {
         padding: 80px 30px;
     }
 
     .dot>h1 {
         font-size: 3em;
-        color:red;
+        /* color: blue; */
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .dot {
+        padding: 80px 30px;
+    }
+
+    .dot>h1 {
+        font-size: 3em;
+        /* color: green; */
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .dot {
+        padding: 80px 30px;
+    }
+
+    .dot>h1 {
+        font-size: 3em;
+        /* color:red; */
 
     }
 }
