--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -1,6 +1,3 @@
-html,
-body,
-#root,
 .scroll {
     width: 100%;
     height: 100%;
@@ -19,8 +16,7 @@ body,
     top: 0;
     left: 0;
     overflow-y: auto;
-    scroll-snap-type: y mandatory;
-    z-index: 10;
+    scroll-snap-type: y proximity;
 }
 
 .scroll>div {
@@ -34,30 +30,17 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-.caption {
-    pointer-events: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 80px;
-    color: #000000;
-    font-size: 8em;
-    font-weight: 100;
-    line-height: 1em;
-    font-variant-numeric: tabular-nums;
-    -webkit-font-smoothing: auto;
-}
-
 .dot {
     pointer-events: none;
     position: sticky;
     top: 0px;
     display: inline-block;
     max-width: 700px;
-    padding: 300px 200px;
-    color: #023976;
+    padding: 300px 500px;
+    /* color: #023976; */
+    color: linear-gradient(90deg, #026eb0 0%, #023976 100%);
     line-height: 1.6em;
-    font-size: 15px;
+    font-size: 18px;
     letter-spacing: 1.5px;
 }
 
@@ -72,6 +55,17 @@ body {
     margin-bottom: 0.25em;
 }
 
+@media only screen and (max-width: 1400px) {
+
+    .dot {
+        padding: 300px 130px;
+    }
+
+    .dot>h1 {
+        font-size: 3em;
+        /* color: blue; */
+    }
+}
 
 
 @media only screen and (max-width: 800px) {
@@ -108,4 +102,18 @@ body {
         /* color:red; */
 
     }
+}
+
+.btn {
+    display: block;
+    margin-top: 1em;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    background: #023976;
+    background: linear-gradient(90deg, #026eb0 0%, #023976 100%);    
+    z-index: 20;
+    color: #ffffff;
+    border-radius: 10px;
 }
