--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -1,3 +1,6 @@
+html,
+body,
+#root,
 .scroll {
     width: 100%;
     height: 100%;
@@ -17,6 +20,7 @@
     left: 0;
     overflow-y: auto;
     scroll-snap-type: y proximity;
+    z-index: 10;
 }
 
 .scroll>div {
