--- a/src/Texts.css
+++ b/src/Texts.css
@@ -3,6 +3,7 @@
   line-height: 1;
   font-size: 1em;
   letter-spacing: 1.5px;
+  font-weight: 400;
 }
 
 .text>h2 {
@@ -29,8 +30,12 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .text {
+    font-size: 1.2em;
+    color: blue;
+  }
   .text>h2 {
-    font-size: 3em;
+    font-size: 4em;
     color: blue;
   }
 }
