--- a/src/components/Texts/Texts.css
+++ b/src/components/Texts/Texts.css
@@ -7,18 +7,18 @@
 }
 
 .AreaTematica>h2 {
-  margin: auto 0;
+  margin: 0;
 
   color: #023976;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   font-size: 3em;
-  width: calc(25vh + 25vw);
+  width: calc(30vh + 30vw);
 }
 
-.AreaTematica>span {
+.AreaTematica>p {
   color: #002753;
   font-size: 1em;
-  width: calc(25vh + 25vw);
+  width: calc(30vh + 30vw);
 }
 
 /* 
