--- a/src/components/Texts/Texts.css
+++ b/src/components/Texts/Texts.css
@@ -51,12 +51,12 @@
 } */
 
 .btn {
-  display: block;
+  display: inline-block;
   margin-top: 1em;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 20px 20px;
   background: #023976;
   background: linear-gradient(90deg, #026eb0 0%, #023976 100%);
   z-index: 20;
