--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,21 @@ canvas {
   image-rendering: pixelated;
   image-rendering: optimize-contrast;
 }
+
+.overlays {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  text-align: center;
+
+}
+
+.arrow {
+  position: absolute;
+  z-index: 100 !important; 
+
+  bottom: 50px;
+}
