--- a/src/index.css
+++ b/src/index.css
@@ -31,18 +31,27 @@ canvas {
 
 .overlays {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  text-align: center;
-
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .arrow {
-  position: absolute;
-  z-index: 100 !important; 
-
-  bottom: 50px;
+  font-size: 0.75em;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 20;
+  opacity: 0.3;
 }
+
+.arrow::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 10px solid #023976;
+  z-index: 20;
+}
+
