--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 body {
   position: fixed;
-  overflow: hidden;
+  /* overflow: hidden; */
   overscroll-behavior-y: none;
   background-color: #b9b9b9;
   background: linear-gradient(180deg, #ffffff 50%, #b9b9b9);
@@ -34,6 +34,7 @@ canvas {
   top: 85%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 10 !important;
 }
 
 .arrow {
@@ -41,7 +42,7 @@ canvas {
   width: 100%;
   display: flex;
   justify-content: center;
-  z-index: 20;
+  z-index: 20 !important;
   opacity: 0.3;
 }
 
@@ -52,6 +53,5 @@ canvas {
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-top: 10px solid #023976;
-  z-index: 20;
 }
 
